samples/_failures_safe/1761409375_5b71ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f52cb183.c: In function ‘main’:
./samples/SAFE/__tmp_f52cb183.c:139:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  139 |     clock_t end
      |     ^~~~~~~
./samples/SAFE/__tmp_f52cb183.c:139:5: error: expected declaration or statement at end of input
